# AEGIS

./: .gitignore  LICENSE  README.md  aegis-architecture.html  aegis-weakpoints-analysis.md  benchmark.py  requirements.txt
cli/: Cargo.toml  README.md  first-save
cli/src/: args.rs  banner.rs  cli.rs  coding.rs  command_line.rs  commands.rs  developer_agent.rs  doctor.rs  engine_client.rs  install.rs  main.rs  menu.rs  runner.rs  runtime.rs  signals.rs  ui.rs  user_profile.rs  workspace.rs
docs/: cli-agent-architecture.md  cli.md  persistent-memory-architecture.md  project.md  provider-capability-architecture.md  reasoning-loop-architecture.md  (+2 more)
engine-rust/: Cargo.toml  RAEDME.md  README.md
engine-rust/src/: config.rs  main.rs
engine-rust/src/classifier/: mod.rs
engine-rust/src/compactor/: mod.rs
engine-rust/src/context/: mod.rs
engine-rust/src/inference/: mod.rs
engine-rust/src/inference/backends/: mod.rs  ollama.rs  openai_compat.rs
engine-rust/src/memory_store/: mod.rs
engine-rust/src/model_registry/: mod.rs
engine-rust/src/network/: mod.rs  router.rs  state.rs
engine-rust/src/network/handlers/: chat.rs  health.rs  mod.rs  models.rs  sessions.rs
engine-rust/src/orchestrator/: mod.rs
engine-rust/src/plan_parser/: mod.rs
engine-rust/src/prompt_builder/: mod.rs
engine-rust/src/rag_client/: mod.rs
engine-rust/src/tool_registry/: mod.rs
engine-rust/src/workflow/: mod.rs  phases.rs  registry.rs
src/cli/: Cargo.toml  README.md  cli.py
src/cli/src/: args.rs  banner.rs  cli.rs  commands.rs  engine_client.rs  install.rs  main.rs  runner.rs  signals.rs  ui.rs
(+193 files in other folders)
