[package]
name = "aegis-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"

# HTTP client (inference backends + RAG client)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file (aegis.toml)
toml = "0.8"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Async trait support
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"
